# Oxytools

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  README_CLI.md  build.rs  config.toml  t.ps1
.github/workflows/: rust.yml
Oxy_Backup/: Oxy_Backup.bat  Oxy_Backup_Run.vbs
Oxy_FL/: Oxy_FLF.bat  Oxy_FL_Run.vbs  oxyfl.bat  oxyfl.ps1  oxyflf.ps1
Oxy_JXL/: oxyj.ps1
Oxy_Watch/: Cargo.toml
Oxy_Watch/src/: main.rs
Oxy_jxl/: Oxy_jxf.ps1  Oxy_jxl.ps1  Oxy_jxp.ps1
Oxy_zip/: oxyz.ps1  oxyzm.ps1
Oxycash/: README.md  main.py  pyproject.toml  requirements.txt
Oxycash/core/: i18n.py  model.py  storage.py  theme.py
Oxycash/views/: __init__.py  charts_view.py  month_view.py  special_views.py
Oxywall/wallpapers/: downloaded.txt
Oxywatch/: Cargo.toml
assets/: Oxytools_icon.rc  io.github.promethyxx.Oxytools.desktop  io.github.promethyxx.Oxytools.metainfo.xml
src/: cli.rs  lang.rs  logging.rs  main.rs  main_cli.rs  test.rs  testmkvwebm.rs
src/modules/: archive.rs  binaries.rs  doc.rs  mod.rs  pic.rs  scrap.rs  tag.rs  tools.rs  video.rs
tests/doc/: MD.md
tests/pic/: JXL.jxl
tojxl/: tojxl.ps1  tojxlf.ps1  tojxlp.ps1
