[package]
name = "oxytools"
version = "2.0.6"
edition = "2024"
license = "GPL-3.0-or-later"
default-run = "Oxytools"

[[bin]]
name = "Oxytools"
path = "src/main.rs"

[[bin]]
name = "oxy"
path = "src/main_cli.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
eframe = "0.34.1"
flate2 = "1"
html2md = "0.2"
image = { version = "0.25", features = ["avif", "exr", "gif", "hdr", "ico", "jpeg", "png", "tiff", "webp"] }
jxl-oxide = { version = "0.12", features = ["image"] }
kamadak-exif = "0.6"
lopdf = "0.40"
open = "5"
psd = "0.3"
pulldown-cmark = "0.13"
quick-xml = "0.39"
rawloader = "0.37"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "query"] }
resvg = "0.47"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust2 = { version = "0.20", features = ["compress"] }
tar = "0.4"
toml = "1.1.2"
which = "8"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
zune-core = "0.5"
zune-jpegxl = "0.5"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1

[features]
default = ["api", "bundled"]
api = [] # No binaries
bundled = [] #Desk version


