[project]
name = "oxycash"
version = "1.0.0"
description = "Monthly budget tracker"
requires-python = ">=3.10"
authors = [{ name = "Promethyxx" }]
dependencies = [
    "flet",
]

[tool.flet]
org = "io.github.promethyxx"
product = "Oxycash"
company = "Promethyxx"
copyright = "Copyright (C) 2025-2026 Promethyxx"

[tool.flet.app]
path = "."

[tool.flet.android]
exclude_packages = ["watchdog"]

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true